--- a/style.css
+++ b/style.css
@@ -1,15 +1,23 @@
-html body
-{
-
+html body{
+  background-image: url("weather.png");
 }
+background-size: auto;
 
 main
 {
   margin-top: 50px;
-}​
+}
+
+img#image{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 80px;
+}
 
 div#main-container{
   margin: 10px;
+  margin-top: 50px;
 }
 
 #head-weather-info{
@@ -18,16 +26,16 @@ div#main-container{
 
 div.weather-col{
   font-size: 30px;
+  height: 80px;
 }
 
 div#weather-info{
 }
 div#weather-extra-info{
-  margin-top: 30px;
+  margin-top: 10px;
   color: gray;
 }
 
-div.container{
-  border: -1px solid black;
-  border-radius: 10px !important;
+div#temp{
+  padding-top: 20px;
 }
